Added feature tests
